# parseltongue

./: .gitignore  Makefile.in  README.md  config.status  configure  configure.ac  setup.cfg
doc/: Makefile.in
parseltongue/: AIPS.py  AIPSData.py  AIPSLite.py  AIPSTV.py  AIPSTask.py  AIPSUtil.py  FITS.py  LocalProxy.py  MinimalMatch.py  Task.py
parseltongue/Proxy/: AIPS.py  AIPSData.py  AIPSTask.py  NOTES  ObitTask.py  Popsdat.py  Task.py
parseltongue/Wizardry/: AIPSData.py
python/: AIPS.py  AIPSData.py  AIPSLite.py  AIPSTask.py  AIPSUtil.py  LocalProxy.py  Makefile.in  MinimalMatch.py  ObitTask.py  ParselTongue.py  Task.py
python/Proxy/: AIPS.py  AIPSData.py  AIPSTask.py  Makefile.in  ObitTask.py  Popsdat.py  Task.py
python/Wizardry/: AIPSData.py  Makefile.in
tests/: conftest.py  test_cat.py  test_image.py  test_indxr.py  test_mandl_image.py  test_tv.py  test_uvcon.py  test_uvdata.py  test_zap.py
tests/data/: n05l1_4C39.25_ICLN.FITS
