[metadata]
name = parseltongue
version = 0.3.0
description = Python (scripting) interface for classic AIPS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/voitsik/parseltongue
author = Mark Kettenis
license = GPL-2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires =
    numpy
    obit
python_requires = >=3.7
